--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
         <header id="header">
             <nav id="nav-bar">
-                <h1 id="Welcome">Welcome</h1>
+                <a href="#header"><img src="Welcome.png" id="Welcome"></a>
                 <a><i class=" fa1 fa-solid fa-bars"></i></a>
              </nav>
          </header>
          <section class="headline">
             <div id="content">
-                <h2 class="main_content">
+                <h1 class="main_content">
                    Hey there. I'm Mariane <br>  <span id="green-word">I'm a software developer</span>
-                 </h2>
+                 </h1>
                  <p class="secondary-text"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don't hestiate to contact me.</p>
             </div>
