Add correct icons

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         
             <div id="div-links">
                 <ul>
-                    <li><a><i class="fa fa-brands fa-twitter twitter"></i></a></li>
-                    <li><a><i class="fa fa-brands fa-linkedin linkedin"></i></a></li>
-                     <li><a><i class="fa fa-solid fa-m m" ></i></a></li>
-                    <li><a><i class="fa fa-brands fa-github github"></i></a></li>
-                    <li><a><i class="fa fa-light fa-hand-peace hand"></i></a></li>
+                    <li><a><img class="fa" src="Icons/twitter.svg"></a></li>
+                    <li><a><img class="fa" src="Icons/Linkedin icon.svg"></a></li>
+                     <li><a><img class="fa" src="Icons/medium.svg"></a></li>
+                    <li><a><img class="fa" src="Icons/github.svg"></a></li>
+                    <li><a><img class="fa" src="Icons/angellist.svg"></a></li>
                  </ul>
              </div>
           </section>
