--- a/index.html
+++ b/index.html
@@ -146,6 +146,24 @@
                         </div>
                 </div>
             </section>
-            
+            <section class="form-section">
+                 <form action="https://formspree.io/f/xlekdbyr" method="post">
+                    <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+                    <input type="text" name="user-name" id="user-name" placeholder="Full name" required>
+                    <input type="email" name="user-email" id="user-email" placeholder="Email address" required>
+                    <textarea name="textarea" id="textarea" required>Enter text here</textarea>
+                    <input type="button" name="submit" id="submit" value="Get in touch">
+                </form>
+                <div id="div-links">
+                    <ul>
+                        <li><a><img class="fa" src="Icons/twitter.svg"></a></li>
+                        <li><a><img class="fa" src="Icons/Linkedin icon.svg"></a></li>
+                         <li><a><img class="fa" src="Icons/medium.svg"></a></li>
+                        <li><a><img class="fa" src="Icons/github.svg"></a></li>
+                        <li><a><img class="fa" src="Icons/angellist.svg"></a></li>
+                     </ul>
+                 </div>
+                 <p class="last-email">myemailhere@email.com</p>
+            </section>
 </body>
 </html>
