--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 </div>
             </section>
             <section class="form-section">
-                 <form action="https://formspree.io/f/xlekdbyr" method="post">
-                    <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+                 <form class="form" action="https://formspree.io/f/xlekdbyr" method="post">
+                    <h2 class="h2-form">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
                     <input type="text" name="user-name" id="user-name" placeholder="Full name" required>
                     <input type="email" name="user-email" id="user-email" placeholder="Email address" required>
                     <textarea name="textarea" id="textarea" required>Enter text here</textarea>
