Update in index and styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         
         
-            <div id="div-links">
+            <div class="div-links">
                 <ul>
                     <li><a><img class="fa" src="Icons/twitter.svg"></a></li>
                     <li><a><img class="fa" src="Icons/Linkedin icon.svg"></a></li>
@@ -151,10 +151,10 @@
                     <h2 class="h2-form">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
                     <input type="text" name="user-name" id="user-name" placeholder="Full name" required>
                     <input type="email" name="user-email" id="user-email" placeholder="Email address" required>
-                    <textarea name="textarea" id="textarea" required>Enter text here</textarea>
+                    <textarea rows="10" name="textarea" id="textarea" required  >Enter text here</textarea>
                     <input type="button" name="submit" id="submit" value="Get in touch">
                 </form>
-                <div id="div-links">
+                <div class="div-links last-link">
                     <ul>
                         <li><a><img class="fa" src="Icons/twitter.svg"></a></li>
                         <li><a><img class="fa" src="Icons/Linkedin icon.svg"></a></li>
@@ -163,6 +163,7 @@
                         <li><a><img class="fa" src="Icons/angellist.svg"></a></li>
                      </ul>
                  </div>
+                 <div class="img">
                  <p class="last-email">myemailhere@email.com</p>
             </section>
 </body>
