update index and styles file

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <h2 class="h2-form">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
                     <input type="text" name="user-name" id="user-name" placeholder="Full name" required>
                     <input type="email" name="user-email" id="user-email" placeholder="Email address" required>
-                    <textarea rows="10" name="textarea" id="textarea" required  >Enter text here</textarea>
+                    <textarea rows="4" name="textarea" id="textarea" required  >Enter text here</textarea>
                     <input type="button" name="submit" id="submit" value="Get in touch">
                 </form>
                 <div class="div-links last-link">
@@ -163,8 +163,10 @@
                         <li><a><img class="fa" src="Icons/angellist.svg"></a></li>
                      </ul>
                  </div>
-                 <div class="img">
-                 <p class="last-email">myemailhere@email.com</p>
+                 <footer>
+                    <p class="last-email">myemailhere@email.com</p>
+                 </footer>
+                
             </section>
 </body>
 </html>
