--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
             <section class="form-section">
                  <form class="form" action="https://formspree.io/f/xlekdbyr" method="post">
                     <h2 class="h2-form">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
-                    <input type="text" name="user-name" id="user-name" placeholder="Full name" required>
+                    <input type="text" name="user-name" id="user-name" maxlength="30" placeholder="Full name" required>
                     <input type="email" name="user-email" id="user-email" placeholder="Email address" required>
-                    <textarea rows="4" name="textarea" id="textarea" required  >Enter text here</textarea>
+                    <textarea rows="4" name="textarea" id="textarea" maxlength="500" required  >Enter text here</textarea>
                     <input type="button" name="submit" id="submit" value="Get in touch">
                 </form>
                 <div class="div-links last-link">
