Correction with submit button

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <input type="text" name="user-name" id="user-name" maxlength="30" placeholder="Full name" required>
                     <input type="email" name="user-email" id="user-email" placeholder="Email address" required>
                     <textarea rows="4" name="textarea" id="textarea" maxlength="500" required  >Enter text here</textarea>
-                    <input type="button" name="submit" id="submit" value="Get in touch">
+                    <input type="submit" name="submit" id="submit" value="Get in touch">
                 </form>
                 <div class="div-links last-link">
                     <ul>
