--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
          <section class="headline">
             <div id="content">
                 <h1 class="main_content">
-                   Hey there. I'm Mariane <br>  <span id="green-word">I'm a software developer</span>
+                   Hey there. I'm Alejandro. <br>  <span id="green-word">I'm a software developer</span>
                  </h1>
                  <p class="secondary-text"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
                 don't hestiate to contact me.</p>
             </div>
         
         
-            <div class="div-links">
+            <div class="div-links ">
                 <ul>
-                    <li><a><img class="fa" src="Icons/twitter.svg"></a></li>
-                    <li><a><img class="fa" src="Icons/Linkedin icon.svg"></a></li>
-                     <li><a><img class="fa" src="Icons/medium.svg"></a></li>
-                    <li><a><img class="fa" src="Icons/github.svg"></a></li>
-                    <li><a><img class="fa" src="Icons/angellist.svg"></a></li>
+                    <li class="a1"><a ><img class="fa" src="Icons/twitter.svg"></a></li>
+                    <li class="a2"><a ><img class="fa" src="Icons/Linkedin icon.svg"></a></li>
+                    <li class="a3"><a><img class="fa" src="Icons/medium.svg"></a></li>
+                    <li class="a4"><a><img class="fa" src="Icons/github.svg"></a></li>
+                    <li class="a5"><a><img class="fa" src="Icons/angellist.svg"></a></li>
                  </ul>
              </div>
              <div class="work-section-button">
                 <img src="Icons/Disabled.svg">
              </div>
          </section>
-         <section class="work-section" id="work-section">
+         <section class="work-section" id="work-section" name="work-section">
          <h3 class="h3-works">My recents<br> works</h3>
          <hr class="work-hr">
              <div class="works-grid">
