Final touch on styles and index, correcting minor issues

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         
             <div class="div-links main-links ">
                 <ul>
-                    <li class="a1"><a ><img class="fa" src="Icons/twitter.svg"></a></li>
-                    <li class="a2"><a ><img class="fa" src="Icons/Linkedin icon.svg"></a></li>
-                    <li class="a3"><a><img class="fa" src="Icons/medium.svg"></a></li>
-                    <li class="a4"><a><img class="fa" src="Icons/github.svg"></a></li>
-                    <li class="a5"><a><img class="fa" src="Icons/angellist.svg"></a></li>
+                    <li class="a1"><a ><img class="fa" src="Icons/twitter.svg" alt="twitter"></a></li>
+                    <li class="a2"><a ><img class="fa" src="Icons/Linkedin icon.svg" alt="LinkedIn"></a></li>
+                    <li class="a3"><a><img class="fa" src="Icons/medium.svg" alt="Medium"></a></li>
+                    <li class="a4"><a><img class="fa" src="Icons/github.svg" alt="Github"></a></li>
+                    <li class="a5"><a><img class="fa" src="Icons/angellist.svg" alt="Angellist"></a></li>
                  </ul>
              </div>
              <div class="work-section-button">
-                <img src="Icons/Disabled.svg">
+                <img src="Icons/Disabled.svg" alt="Button">
              </div>
          </section>
          <section class="work-section" id="work-section" name="work-section">
