Delete name property from work-section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="Icons/Disabled.svg" alt="Button">
              </div>
          </section>
-         <section class="work-section" id="work-section" name="work-section">
+         <section class="work-section" id="work-section">
          <h3 class="h3-works">My recents<br class="mobile"> works</h3>
          <hr class="work-hr mobile">
              <div class="works-grid">
