--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/71e053ea26.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Portfolio Alejandro-Bernal-M</title>
 </head>
 <body>
         <header id="header">
@@ -44,7 +44,7 @@
                 <img src="Icons/Disabled.svg" alt="Button">
              </div>
          </section>
-         <section class="work-section" id="work-section" name="work-section">
+         <section class="work-section" id="work-section">
          <h3 class="h3-works">My recents<br class="mobile"> works</h3>
          <hr class="work-hr mobile">
              <div class="works-grid">
