--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <header id="header">
             <nav id="nav-bar">
-                <a class="mobile" href="#header"><img src="Images/Welcome.png" id="Welcome"></a>
+                <a class="mobile" href="#header"><img src="Images/Welcome.png" id="Welcome" alt="Welcome"></a>
                 <a class="mobile"><i class=" fa1 fa-solid fa-bars"></i></a>
                 <ul class="desktop ul-nav">
                     <li><a href="#work-section" >Porfolio</a></li>
@@ -33,15 +33,15 @@
         
             <div class="div-links main-links ">
                 <ul>
-                    <li class="a1"><a ><img class="fa" src="Icons/twitter.svg" alt="twitter"></a></li>
-                    <li class="a2"><a ><img class="fa" src="Icons/Linkedin icon.svg" alt="LinkedIn"></a></li>
-                    <li class="a3"><a><img class="fa" src="Icons/medium.svg" alt="Medium"></a></li>
-                    <li class="a4"><a><img class="fa" src="Icons/github.svg" alt="Github"></a></li>
-                    <li class="a5"><a><img class="fa" src="Icons/angellist.svg" alt="Angellist"></a></li>
+                    <li class="a1"><a ><img class="fa" src="Icons/twitter.svg" alt="Twitter's Logo"></a></li>
+                    <li class="a2"><a ><img class="fa" src="Icons/Linkedin.svg" alt="LinkedIn's Logo"></a></li>
+                    <li class="a3"><a><img class="fa" src="Icons/medium.svg" alt="Medium's Logo"></a></li>
+                    <li class="a4"><a><img class="fa" src="Icons/github.svg" alt="GitHub's Logo"></a></li>
+                    <li class="a5"><a><img class="fa" src="Icons/angellist.svg" alt="Angellist's Logo"></a></li>
                  </ul>
              </div>
              <div class="work-section-button">
-                <img src="Icons/Disabled.svg" alt="Button">
+                <img src="Icons/Disabled.svg" alt="Arrow Button">
              </div>
          </section>
          <section class="work-section" id="work-section">
@@ -111,11 +111,11 @@
              </div>
             </section>
             <section class="about-me-section" id="about-me-section">
-                <img class="il-about il-1-b desktop" src="Desktop-images/illustration-about me-1-desktop.svg">
-                <img class="il-about il-2-b desktop" src="Desktop-images/illustration-about-me-2-desktop.svg">   
+                <img class="il-about il-1-b desktop" src="Desktop-images/illustration-about-me-1-desktop.svg" alt="">
+                <img class="il-about il-2-b desktop" src="Desktop-images/illustration-about-me-2-desktop.svg" alt="">   
                 <div class="about-me">
-                    <img class="il-about il-1-a mobile" src="Images/illustration 1- about me-mobile.svg">
-                     <img class="il-about il-2-a mobile" src="Images/illustration 2-about me mobile.svg">
+                    <img class="il-about il-1-a mobile" src="Images/illustration-1-about-me-mobile.svg" alt="">
+                     <img class="il-about il-2-a mobile" src="Images/illustration-2-about-me-mobile.svg" alt="">
                      
                     <h2 class="h2-about">About me</h2>
                     <p class="p-about"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
@@ -125,7 +125,7 @@
                     </div>
                 <div class="about-me-grid">
                         <div class="grid-item-about">
-                            <div class="img-holder-about"><img src="Images/icon-languages.svg"></div>
+                            <div class="img-holder-about"><img src="Images/icon-languages.svg" alt=""></div>
                             <h3 class="text3-about">Languages</h3>
                             <ul class="list-about">
                                 <li>HTML</li>
@@ -134,7 +134,7 @@
                             </ul>
                         </div>
                         <div class="grid-item-about">
-                            <div class="img-holder-about"><img src="Images/Icons.svg"></div>
+                            <div class="img-holder-about"><img src="Images/Icons.svg" alt=""></div>
                             <h3 class="text3-about">Frameworks</h3>
                             <ul class="list-about">
                                 <li>HTML</li>
@@ -143,7 +143,7 @@
                             </ul>
                         </div>
                         <div class="grid-item-about">
-                            <div class="img-holder-about"><img src="Images/ligth.svg"> </div>
+                            <div class="img-holder-about"><img src="Images/ligth.svg" alt=""> </div>
                             <h3 class="text3-about">Skills</h3>
                             <ul class="list-about">
                                 <li>HTML</li>
@@ -166,11 +166,11 @@
                 <hr class="desktop hr-footer">
                 <div class="div-links last-link">
                     <ul>
-                        <li class="a1"><a><img class="fa" src="Icons/twitter.svg"></a></li>
-                        <li class="a2"><a><img class="fa" src="Icons/Linkedin icon.svg"></a></li>
-                         <li class="a3"><a><img class="fa" src="Icons/medium.svg"></a></li>
-                        <li class="a4"><a><img class="fa" src="Icons/github.svg"></a></li>
-                        <li class="a5"><a><img class="fa" src="Icons/angellist.svg"></a></li>
+                        <li class="a1"><a><img class="fa" src="Icons/twitter.svg" alt="Twitte's logo"></a></li>
+                        <li class="a2"><a><img class="fa" src="Icons/Linkedin.svg" alt="Linkedin's logo"></a></li>
+                         <li class="a3"><a><img class="fa" src="Icons/medium.svg" alt="Medium's logo "></a></li>
+                        <li class="a4"><a><img class="fa" src="Icons/github.svg" alt="GitHub's logo"></a></li>
+                        <li class="a5"><a><img class="fa" src="Icons/angellist.svg" alt="Angellist's logo"></a></li>
                      </ul>
                  </div>
                 <p class="last-email mobile">myemailhere@email.com</p>
