--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
             <section class="form-section" id="form-section">
                 <h2 class="h2-form"><br class="desktop">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
                  <form class="form" action="https://formspree.io/f/xlekdbyr" method="post">
-                    <input type="text" name="user-name" id="user-name" maxlength="30" placeholder="Full name" required>
-                    <input type="email" name="user-email" id="user-email" placeholder="Email address" required>
-                    <textarea rows="4" name="textarea" id="textarea" maxlength="500" required  >Enter text here</textarea>
+                    <label for="user-name"><input type="text" name="user-name" id="user-name" maxlength="30" placeholder="Full name" required> </label>
+                    <label for="user-email"><input type="email" name="user-email" id="user-email" placeholder="Email address" required></label>
+                    <label for="textarea"><textarea rows="4" name="textarea" id="textarea" maxlength="500" required  >Enter text here</textarea></label>
                     <button class="button-h button-form" type="submit" name="submit" id="submit">Get in touch</button>
                 </form> 
             </section>
