Update index.html changed the id of input

--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
         projects, so if you'd like to chat please get in touch.
       </h2>
       <form class="form" action="https://formspree.io/f/xlekdbyr" method="post">
-        <label for="user-name"
+        <label for="fullname"
           ><input
             type="text"
-            name="user-name"
-            id="user-name"
+            name="fullname"
+            id="fullname"
             maxlength="30"
             placeholder="Full name"
             required
