Add JavaScript document

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       src="https://kit.fontawesome.com/71e053ea26.js"
       crossorigin="anonymous"
     ></script>
+    <script>
+      src="java.js"
+    </script>
     <title>Portfolio Alejandro-Bernal-M</title>
   </head>
   <body>
