Smooth scroll implementation

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <div class="modal-menu mobile">
         <img class="modal-img" src="Icons/Enabled.svg">
         <ul class="modal-ul">
-          <li><a class="modal-a1" href="#work-section">Porfolio</a></li>
-          <li><a class="modal-a2" href="#about-me-section">About</a></li>
-          <li><a class="modal-a3" href="#form-section">Contact</a></li>
+          <li><a class="modala modal-a1" href="#work-section">Porfolio</a></li>
+          <li><a class="modala modal-a2" href="#about-me-section">About</a></li>
+          <li><a class="modala modal-a3" href="#form-section">Contact</a></li>
         </ul>
       </div>
     </header>
