Index and styles ready for popup, icons added to root folder

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <title>Portfolio Alejandro-Bernal-M</title>
   </head>
   <body>
-    <header id="header">
-      <nav id="nav-bar">
+    <header class="hide" id="header">
+      <nav class="nav-bar hide">
         <a class="mobile" href="#header"
           ><img src="Images/Welcome.png" id="Welcome" alt="Welcome"
         /></a>
@@ -38,7 +38,7 @@
         </ul>
       </div>
     </header>
-    <section class="headline">
+    <section class="headline hide">
       <div id="content">
         <h1 class="main_content">
           Hey there. I'm Alejandro. <br />
@@ -90,7 +90,7 @@
         <img src="Icons/Disabled.svg" alt="Arrow Button" />
       </div>
     </section>
-    <section class="work-section" id="work-section">
+    <section class="work-section hide" id="work-section">
       <h2 class="h3-works">
         My recents<br class="mobile" />
         works
@@ -108,10 +108,15 @@
         <div class="grid-item">
         </div>
         <div class="grid-item">
-        </div>
+        </div>  
       </div>
+      
     </section>
-    <section class="about-me-section" id="about-me-section">
+    <div id="popup" class="popup-window">
+      <div class="div-popup">
+      </div>
+    </div>
+    <section class="about-me-section hide" id="about-me-section">
       <img
         class="il-about il-1-b desktop"
         src="Desktop-images/illustration-about-me-1-desktop.svg"
@@ -178,7 +183,7 @@
         </div>
       </div>
     </section>
-    <section class="form-section" id="form-section">
+    <section class="form-section hide" id="form-section">
       <h2 class="h2-form">
         <br class="desktop" />I'm always interested in hearing about new
         projects, so if you'd like to chat please get in touch.
@@ -223,7 +228,7 @@ Enter text here</textarea
         </button>
       </form>
     </section>
-    <footer>
+    <footer class="hide">
       <hr class="desktop hr-footer" />
       <div class="div-links last-link">
         <ul>
