Add spam element to display the error message

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@ Enter text here</textarea
         >
           Get in touch
         </button>
+        <span id="form-error"></span>
       </form>
     </section>
     <footer class="hide">
