--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
             name="textarea"
             id="textarea"
             maxlength="500"
+            placeholder="Enter text here"
             required
-          >
-Enter text here</textarea
+          ></textarea
           >
         </label>
         <button
