Button on main section implemented and styled, changes on windos.scrollTo after closing popup

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </ul>
       </div>
       <div class="work-section-button">
-        <img src="Icons/Disabled.svg" alt="Arrow Button" />
+        <a href="#work-section"><img src="Icons/Disabled.svg" alt="Arrow Button" /></a>
       </div>
     </section>
     <section class="work-section hide" id="work-section">
